# fordez-cli

./: README.md  agent.py  fastagent.config.yaml  fastagent.jsonl  fastagent.secrets.yaml  fordez.py  memory.json
app/: main.py
fordez-agents/: fastagent.config.yaml  fastagent.jsonl  main.py  pyproject.toml
fordez-mcp/fastmcp/: main.py  pyproject.toml
fordez-tasks/: pefil-formato.txt
fordez-voice/: .env.local
src/core/agents-tasks/agent-livekit/: agent.py  pyproject.toml
