[project]
name = "fordez-livekit"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents[cartesia,deepgram,google,openai,silero,turn-detector]~=1.2",
    "livekit-plugins-noise-cancellation~=0.2",
    "livekit-plugins-turn-detector>=1.2.6",
    "python-dotenv>=1.1.1",
    "torch",
    "torchaudio",
    "torchvision",
]
